@@ -8,6 +8,7 @@ require_once( __ROOT__ . "/settings/db.php" );
 require_once( __ROOT__ . "/classes/db.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/album.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/bio.php" );
+require_once( __ROOT__ . "/classes/dyrki/itwp/edificioreligioso.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/divisioneamministrativa.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/film.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/libro.php" );
