@@ -32,6 +32,7 @@ Version dev
     * tplckr.itwp.film.pRatio - Created
     * tplckr.itwp.film.pTipoaudio - Created
     * tplckr.itwp.film.pTipocolore - Created
+    * itwp.edificioreligioso - Created
 
 Version 5.0 (11/03/2012)
     * itwp.operaarte add tMateriale
